--- a/Assignment_1/A1.tex
+++ b/Assignment_1/A1.tex
@@ -248,26 +248,37 @@ The ball so drawn is found to be red in colour. Find the probability that the
 transferred ball is black. }
 \bigskip
 \newline\noindent\textbf{Answer: }$(\frac{16}{31})$\\
-\noindent\textbf{Solution: }\textit{By Bayes's Theorem we have,for any i =1,2,3,..n , where $E_1, E_2,…, E_n $ be a set of events associated with a sample space S, where all the events $E_1, E_2,…, E_n $ form a partition of S.For an event A associated with S,}
-\[\pr{E_i|A}=\frac{\pr{E_i}\pr{A|E_i}}{\sum_{k=1}^{k=n}\pr{E_k}\pr{A|E_k}}\]
+\noindent\textbf{Solution: }
 \\Let R and B be the events that the ball transferred from Box-1 to Box-2 is Red and Black respectively.\\
 \begin{align}
-\pr{R}&=\frac{No.of  Red  balls}{Total  Balls}= \frac{3}{7}\\
-\pr{B}&=\frac{No.of Black  balls}{Total  Balls}=\frac{4}{7}
-\end{align}
-\\Let's take the conditional probability for event E, which denotes the outcome of final ball drawn being Red.
-\\When event R occurs, in Box-2 the count of red balls becomes 5 and black balls remains 5. \\
-\begin{align}\pr{E|R}=\frac{5}{10}\end{align}
-\\When event B occurs, in Box-2 the count of red balls remains 4 and black balls becomes 5. \\
-\begin{align}\pr{E|B}=\frac{4}{10}\end{align}
-\\\textit{By Bayes Theorem,}\\
-\begin{align}\pr{E|B}=\frac{\pr{E|B}.\pr{B}}{\pr{E|B}.\pr{B}+\pr{E|R}.\pr{R}}\end{align}
-where P(E/B) is the probability of final ball being red known that the transferred ball is Black, which is our desired final answer.\\
+  \pr{R}&=\frac{No.of  Red  balls}{Total  Balls}= \frac{3}{7}\\
+  \pr{B}&=\frac{No.of Black  balls}{Total  Balls}=\frac{4}{7}
+\end{align}\\
+Let \pr{X} be the Random variable for the outcomes of ball drawn from Bag II.
 \begin{align}
-\pr{E|B}&=\frac{\frac{4}{10}.\frac{4}{7}}{\frac{4}{10}.\frac{4}{7}+\frac{5}{10}.\frac{3}{7}}\\
-\pr{E|B}&=\frac{16}{31}
+	X = 
+	\begin{cases}
+		1, & \text{if ball drawn is red known that event R occurs} \\
+		2, & \text{if ball drawn is red known that event B occur}\\
+    3, & \text{if ball drawn is Black}
+	\end{cases}
 \end{align}
-\\The probability that the transferred ball is Black is $\frac{16}{31}$.
+\begin{align}\pr{X=1}&=\pr{R}\times\frac{5}{10}=\frac{15}{70}\\
+\pr{X=2}&=\pr{B}\times\frac{4}{10}=\frac{16}{70}\end{align}\\
+Let \pr{X=3} denote the probabilty that ball drawn is Black. We know that the ball drawn will be Black or Red for sure. So,\\
+\begin{align}\pr{X=3}&=1-\pr{X=1}-\pr{X=2}\\
+  \pr{X=3}&=1-\frac{15}{70}-\frac{16}{30}\\
+  \pr{X=3}&=\frac{39}{70}
+\end{align}
+\\\textit{By Bayes Theorem,}\\
+\begin{align}\pr{E_i|A}&=\frac{\pr{E_i}\pr{A|E_i}}{\sum_{k=1}^{k=n}\pr{E_k}\pr{A|E_k}}\\
+\pr{B|E}&=\frac{\pr{E|B}\pr{B}}{\pr{E|B}\pr{B}+\pr{E|R}\pr{R}}\\
+\pr{B|E}&=\frac{\pr{X=1}}{\pr{X=1}+\pr{X=2}}\end{align}
+where \pr{B|E} is the conditional probability of transferred ball being Black, known that the final ball drawn is Red which is our desired final answer.\\
+\begin{align}
+\pr{B|E}&=\frac{\frac{4}{10}\times\frac{4}{7}}{\frac{4}{10}\times\frac{4}{7}+\frac{5}{10}\times\frac{3}{7}}\\
+\pr{B|E}&=\frac{16}{31}
+\end{align}
 \bigskip
 
 \renewcommand{\thefigure}{\theenumi}
