--- a/Assignment_1/A1.tex
+++ b/Assignment_1/A1.tex
@@ -276,7 +276,12 @@ Let \pr{X,Y} be the Random variable for the events of drawing balls from bags.
 By total probability law, we know,
 \begin{align}\pr{X=2,Y=2}&=1-\pr{X=2,Y=1}\\
   \pr{X=2,Y=2}&=\frac{39}{70}
-\end{align}\\
+\end{align}
+\begin{table}[htbp]
+  \label{table:1}
+  \input{tables/table1.tex}
+  \caption{Final probabilities of the events.}
+  \end{table}
 \\\textit{By Bayes Theorem,}\\
 \begin{align}\pr{E_i|A}=\frac{\pr{E_i}\pr{A|E_i}}{\sum_{k=1}^{k=n}\pr{E_k}\pr{A|E_k}}\end{align}\\
 \begin{align}\pr{B|E}=\frac{\pr{(X=2,Y=1)|(X=1,Y=1)}\pr{X=1,Y=1}}{\pr{X=2,Y=1|X=1,Y=1}\pr{X=1,Y=1}+\pr{X=2,Y=1|X=1,Y=2}\pr{X=1,Y=2}}\end{align}\\
