--- a/Assignment_1/A1.tex
+++ b/Assignment_1/A1.tex
@@ -287,8 +287,8 @@ By total probability law, we know,
 \begin{align}\pr{B|E}=\frac{\pr{(X=2,Y=1)|(X=1,Y=1)}\pr{X=1,Y=1}}{\pr{X=2,Y=1|X=1,Y=1}\pr{X=1,Y=1}+\pr{X=2,Y=1|X=1,Y=2}\pr{X=1,Y=2}}\end{align}\\
 where \pr{B|E} is the conditional probability of transferred ball being Black, known that the final ball drawn is Red which is our desired final answer.\\
 \begin{align}
-\pr{X=1|Y=2}&=\frac{\frac{4}{10}\times\frac{4}{7}}{\frac{4}{10}\times\frac{4}{7}+\frac{5}{10}\times\frac{3}{7}}\\
-\pr{X=1|Y=2}&=\frac{16}{31}
+\pr{B|E}&=\frac{\frac{4}{10}\times\frac{4}{7}}{\frac{4}{10}\times\frac{4}{7}+\frac{5}{10}\times\frac{3}{7}}\\
+\pr{B|E}&=\frac{16}{31}
 \end{align}
 \bigskip
 \renewcommand{\thefigure}{\theenumi}
