--- a/Assignment-3/A3.tex
+++ b/Assignment-3/A3.tex
@@ -257,8 +257,8 @@ on first two tosses. }\\
 \end{align}
 The event EF consists of the only outcome {6,5,4} occuring in first three tosses.
 \begin{align}
-    \pr{F}=\frac{1}{6}\times\frac{1}{6}\times\frac{1}{6}\\
-    \pr{F}=\frac{1}{216}
+    \pr{EF}=\frac{1}{6}\times\frac{1}{6}\times\frac{1}{6}\\
+    \pr{EF}=\frac{1}{216}
 \end{align}
 We have,\\
 \begin{align}
