--- a/Assignment-3/A3.tex
+++ b/Assignment-3/A3.tex
@@ -260,6 +260,11 @@ The event EF consists of the only outcome {6,5,4} occuring in first three tosses
     \pr{EF}=\frac{1}{6}\times\frac{1}{6}\times\frac{1}{6}\\
     \pr{EF}=\frac{1}{216}
 \end{align}
+\begin{table}[htbp]
+  \label{table:1}
+  \input{tables/table1.tex}
+  \noindent\caption{Final probabilities of the events.}
+  \end{table}
 We have,\\
 \begin{align}
 \pr{E|F}=\frac{\pr{EF}}{\pr{F}}\\
