--- a/Assignment-3/tables/table1.tex
+++ b/Assignment-3/tables/table1.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{align}
     \begin{tabular}{|l|l|l|}\hline
+        Parameter & Value & Description\\\hline
         E	    &\pr{E}=$\frac{1}{36}$  &6 and 5 occuring respectively on first 2 rolls\\\hline
         EF	&\pr{EF}=$\frac{1}{216}$ &6,5 and 4 occuring respectively on first 3 rolls\\\hline
         \end{tabular}
