--- a/Playlist/report/report.tex
+++ b/Playlist/report/report.tex
@@ -328,8 +328,10 @@ After running the Random Player program, the following observations were made:
 The Random Player program successfully implemented a random music player with basic playback controls. The program's modular structure allowed easy integration of Pygame and tkinter libraries to provide a graphical user interface for controlling the music playback. Additional features such as volume control, shuffle mode,previous, and playlist management which take only 5-6 lines extra code for each.
 
 \begin{figure}[h!]
-    \includegraphics[scale = 0.3]{images/GUI.png}
+	\begin{center}
+    \includegraphics[scale = 0.25]{images/GUI.png}
      \caption{The GUI for player.}
+	\end{center}
 \end{figure}
 
 
